Fixed mobile overflow due to animations

--- a/src/index.css
+++ b/src/index.css
@@ -28,10 +28,11 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
   background:
   radial-gradient(70% 55% at 50% 50%, #1b3b5a 0%, #0f2a43 35%, #071f35 60%, #040d2c 85%, #01040d 100%),
   radial-gradient(160% 130% at 10% 10%, rgba(150,50,200,0.1) 38%, rgba(0,0,0,0.9) 76%, #000208 100%),
-  radial-gradient(160% 130% at 90% 90%, rgba(200,50,200,0.15) 38%, rgba(0,0,0,0.9) 76%, #000208 100%)                               
+  radial-gradient(160% 130% at 90% 90%, rgba(200,50,200,0.15) 38%, rgba(0,0,0,0.9) 76%, #000208 100%);                             
 }
 
 @media (prefers-color-scheme: dark) {
